// -*- mode: text; -*-

This file is referred by some automatic release scripts.

[Release History (Japanese)]
<!-- BEGIN-LATEST-JP -->
<li>Polaris Engine 1.2.25 2024/5/9
  <ul>
    <li>ファイル選択のバグを回避</li>
  </ul>
</li>
<!-- END-LATEST-JP -->
<li>Polaris Engine 1.2.24 2024/5/9
  <ul>
    <li>「続ける」ボタンを押したときに編集を反映するように修正</li>
    <li>Ctrlキーのバグを修正</li>
    <li>ファイル選択のバグを修正</li>
  </ul>
</li>
<li>Polaris Engine 1.2.23 2024/5/9
  <ul>
    <li>Linuxでのビルドを改善 (RedHat系に対応)</li>
  </ul>
</li>
<li>Polaris Engine 1.2.22 2024/5/9
  <ul>
    <li>文字色を元に戻す装飾を追加</li>
  </ul>
</li>
<li>Polaris Engine 1.2.21 2024/5/9
  <ul>
    <li>補完以外の場合、タブキーで4つスペースを入力するように変更</li>
  </ul>
</li>
<li>Polaris Engine 1.2.20 2024/5/9
  <ul>
    <li>ファイル選択のキャンセル時にシナリオが再ロードされるバグを修正</li>
    <li>Shift+EnterとEnterの挙動を入れ替え</li>
  </ul>
</li>
<li>Polaris Engine 1.2.19 2024/5/9
  <ul>
    <li>シナリオ末尾がラベル等のときのチラつきを抑制</li>
  </ul>
</li>
<li>Polaris Engine 1.2.18 2024/5/8
  <ul>
    <li>シナリオを開くボタンとメニューを修正</li>
  </ul>
</li>
<li>Polaris Engine 1.2.17 2024/5/8
  <ul>
    <li>シナリオ保存のバグを修正</li>
  </ul>
</li>
<li>Polaris Engine 1.2.16 2024/5/8
  <ul>
    <li>マスターボリュームのバグを修正</li>
  </ul>
</li>
<li>Polaris Engine 1.2.15 2024/5/8
  <ul>
    <li>既読フラグの管理を改善</li>
  </ul>
</li>
<li>Polaris Engine 1.2.14 2024/5/8
  <ul>
    <li>アニメシステムのバグを修正</li>
  </ul>
</li>
<li>Polaris Engine 1.2.13 2024/5/7
  <ul>
    <li>iOS自動ビルドの追加</li>
  </ul>
</li>
<li>Polaris Engine 1.2.12 2024/5/7
  <ul>
    <li>Android自動ビルドの修正</li>
  </ul>
</li>
<li>Polaris Engine 1.2.11 2024/5/7
  <ul>
    <li>Android自動ビルドの修正</li>
  </ul>
</li>
<li>Polaris Engine 1.2.10 2024/5/7
  <ul>
    <li>Android自動ビルドの修正</li>
  </ul>
</li>
<li>Polaris Engine 1.2.9 2024/5/7
  <ul>
    <li>Android自動ビルドの修正</li>
  </ul>
</li>
<li>Polaris Engine 1.2.8 2024/5/7
  <ul>
    <li>Android自動ビルドの修正</li>
  </ul>
</li>
<li>Polaris Engine 1.2.7 2024/5/7
  <ul>
    <li>Android自動ビルドの修正</li>
  </ul>
</li>
<li>Polaris Engine 1.2.6 2024/5/7
  <ul>
    <li>アニメ機能で拡大率が0になるバグを修正</li>